# radicalbit-ai-monitoring

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  NOTICE  README.md  RELEASE.md  docker-compose.yaml
docs/quickstarts/: README.md  pyproject.toml
docs/quickstarts/data/binary_classification/: current1-income.csv  reference-income.csv
docs/quickstarts/data/multiclass-classification/: 3_classes_current1.csv  3_classes_reference.csv
docs/quickstarts/data/regression/: regression_abalone_reference.csv
docs/quickstarts/notebooks/: binary-classification-income-data.ipynb  multiclass-classification-heart-data.ipynb  regression_abalone.ipynb
sdk/: README.md  main.py  pyproject.toml
sdk/radicalbit_platform_sdk/: client.py
sdk/radicalbit_platform_sdk/apis/: __init__.py  api_key.py  model.py  model_completion_dataset.py  model_current_dataset.py  model_reference_dataset.py  project.py  tracing_dashboard.py  tracing_root_trace.py  tracing_session.py
sdk/radicalbit_platform_sdk/charts/: __init__.py  chart.py  chart_data.py  chart_type.py  radicalbit_sdk_chart.py  radicalbit_sdk_chart_data.py  utils.py
sdk/radicalbit_platform_sdk/charts/binary_classification/: __init__.py  binary_chart.py  binary_chart_data.py
sdk/radicalbit_platform_sdk/charts/common/: __init__.py  chart.py  chart_data.py  utils.py
sdk/radicalbit_platform_sdk/charts/multi_classification/: __init__.py  multi_class_chart.py  multi_class_chart_data.py
sdk/radicalbit_platform_sdk/charts/regression/: __init__.py  regression_chart.py  regression_chart_data.py
sdk/radicalbit_platform_sdk/commons/: __init__.py  rest_utils.py
sdk/radicalbit_platform_sdk/errors/: __init__.py  errors.py
sdk/radicalbit_platform_sdk/models/: __init__.py  api_key_definition.py  aws_credentials.py  column_definition.py  data_type.py  dataset_data_quality.py  dataset_drift.py  dataset_model_quality.py  dataset_percentages.py  dataset_stats.py  drift_method.py  field_type.py  file_upload_result.py  job_status.py  model_definition.py  model_type.py  project_definition.py  supported_types.py  tracing.py  widget.py
sdk/tests/: client_test.py
sdk/tests/apis/: model_completion_dataset_test.py  model_current_dataset_test.py  model_reference_dataset_test.py  model_test.py  project_test.py  tracing_dashboard_test.py  tracing_session_test.py  tracing_trace_root_test.py
sdk/tests/chart/: binary_charts.ipynb  binary_data_quality.ipynb  binary_model_quality.ipynb  chart.ipynb  multi_class.ipynb  multiclass_data_quality.ipynb  multiclass_model_quality.ipynb  numerical_bar_chart.ipynb  regression.ipynb  regression_data_quality.ipynb  regression_model_quality.ipynb  test.ipynb  test_chart.ipynb
sdk/tests/commons/: rest_utils_test.py
sdk/tests/models/: ApiKeyDefinitionTest.py  column_definition_test.py  model_definition_test.py  project_definition_test.py
sdk/tests_resources/: generative_response.json  generative_wrong_response.json  people.csv  people_current.csv  people_pipe_separated.csv  wrong.csv
spark/: .gitignore  Dockerfile  PERFORMANCE_ANALYSIS_current_multiclass.md  README.md  asdasd.json  pyproject.toml
spark/jobs/: completion_job.py  current_job.py  embeddings_current_job.py  embeddings_reference_job.py  llm_job.py  reference_job.py
spark/jobs/embeddings/: embeddings_drift_detector.py
spark/jobs/metrics/: chi2.py  completion_metrics.py  data_quality_calculator.py  drift_calculator.py  drift_factory_pattern.py  hellinger_distance.py  jensen_shannon_distance.py  ks.py  kullback_leibler_divergence.py  llm_metrics.py  model_quality_regression_calculator.py  percentages.py  psi.py  statistics.py  wasserstein_distance.py
spark/jobs/models/: completion_dataset.py  current_dataset.py  data_quality.py  llm_dataset.py  map_algo_class.py  reference_dataset.py  regression_model_quality.py  statistics.py
spark/jobs/utils/: chi2.py  current.py  current_binary.py  current_multiclass.py  current_regression.py  data_quality.py  db.py  drift_detector.py  ks.py  logger.py  misc.py  models.py  reference.py  reference_binary.py  reference_multiclass.py  reference_regression.py  spark.py
spark/tests/: binary_current_test.py  binary_drift_test.py  binary_reference_test.py  completion_metrics_test.py  conftest.py  current_test.py  drift_calculator_test.py  drift_test.py  embeddings_drift_detector_test.py  hellinger_distance_test.py  jensen_shannon_distance_test.py  jobs_test.py  kullback_leibler_divergence_test.py  llm_metrics_test.py  multiclass_current_test.py  multiclass_reference_test.py  percentages_test.py  performance_multiclass_test.py  performance_reference_multiclass_test.py  reference_test.py  regression_current_test.py  regression_reference_test.py  wasserstein_distance_test.py
spark/tests/jobs/: embeddings_current_job.py  embeddings_reference_job.py
spark/tests/models/: current_dataset_test.py  reference_dataset_test.py
spark/tests/resources/: embeddings_distances.py
spark/tests/resources/completion/: metrics.json  metrics_one.json
spark/tests/resources/current/: current_phone_drift_dataset.csv  dataset.csv  dataset_bool_missing.csv  dataset_cat_missing.csv  dataset_for_day.csv  dataset_for_hour.csv  dataset_for_month.csv  dataset_for_week.csv  dataset_nulls.csv  dataset_with_datetime.csv  drift_dataset.csv  drift_dataset_bigger_file.csv  drift_small_dataset.csv  easy_dataset_bucket_test.csv  embeddings_cur.csv
spark/tests/resources/current/multiclass/: current_sentiment_analysis_talk.csv  (+7 more)
spark/tests/resources/reference/: complete_dataset.csv  dataset.csv  dataset_nulls.csv  easy_dataset.csv  embeddings.csv  embeddings_ref.csv  reference_joined.csv  reference_phone_drift_dataset.csv
spark/tests/results/: binary_current_results.py  binary_reference_results.py  completion_metrics_results.py  drift_calculator_results.py  embedding_ref_metrics.py  jobs_results.py  llm_metrics_results.py  multiclass_current_results.py  multiclass_reference_results.py  percentage_results.py  regression_current_results.py  regression_reference_results.py
spark/tests/utils/: pytest_utils.py
(+729 files in other folders)
