[tool.poetry]
name = "radicalbit-platform-sdk"
# x-release-please-start-version
version = "0.9.0"
# x-release-please-end
description = ""
authors = ["dev.team <devs@radicalbit.io>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.7.1"
boto3 = "^1.34.111"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
responses = "^0.25.0"
pytest = "^8.2.0"
ruff = "^0.4.4"
moto = {extras = ["s3"], version = "^5.0.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
